--- a/publications/index.html
+++ b/publications/index.html
@@ -96,7 +96,7 @@
 			    <div class="publication">
 				<p class="authors"><span class="my-name">S. Feng</span>, A. Agarwala, N. Trivedi</p>
 				<p class="title">Dimensional reduction of Kitaev spin liquid at quantum criticality</p>
-				<p class="journal"><a href="https://arxiv.org/abs/2308.08116" class="journal-link">arXiv:2308.08116 (2023)</a></p>
+				<p class="journal"><a href="https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.6.013298" class="journal-link">Phys. Rev. Research 6, 013298 (2024)</a></p>
 			    </div>
 			    
 			    <div class="publication">
