--- a/publications/index.html
+++ b/publications/index.html
@@ -87,6 +87,12 @@
 			<br>
 
 			<div class="publication-list">
+				<div class="publication">
+				<p class="authors"> K. Wang*, <span class="my-name">S. Feng</span>*, Penghao Zhu, Runze Chi, Hai-Jun Liao, Tao Xiang</p>
+				<p class="title">Fractionalization signatures in the dynamics of quantum spin liquids</p>
+				<p class="journal"><a href="https://arxiv.org/abs/2403.12141" class="journal-link">arXiv:2403.12141 (2024)</a></p>
+			    </div>
+			    
 			    <div class="publication">
 				<p class="authors"><span class="my-name">S. Feng</span></p>
 				<p class="title">Hidden subsystem symmetry protected states in competing topological orders</p>
