--- a/publications/index.html
+++ b/publications/index.html
@@ -88,7 +88,7 @@
 
 			<div class="publication-list">
 				<div class="publication">
-				<p class="authors"> K. Wang*, <span class="my-name">S. Feng</span>*, Penghao Zhu, Runze Chi, Hai-Jun Liao, Nandini Trivedi, Tao Xiang</p>
+				<p class="authors"> K. Wang*, <span class="my-name">S. Feng</span>*, P. Zhu, R. Chi, H.-J Liao, N. Trivedi, T. Xiang</p>
 				<p class="title">Fractionalization signatures in the dynamics of quantum spin liquids</p>
 				<p class="journal"><a href="https://arxiv.org/abs/2403.12141" class="journal-link">arXiv:2403.12141 (2024)</a></p>
 			    </div>
