--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 		<hr>
 
 		<p class="texts">
-		I'm a graduate student of theoretical condensed matter physics at <a href="http://trivediresearch.org.ohio-state.edu/" target="_self">Dr. Trivedi's group</a> in the Ohio State University. I am interested in understanding quantum phase transition, quantum spin liquids and their overlap with quantum information theory. When I am not hard at work, you can find me at the Union Cemetery.
+		I'm a graduate student of theoretical condensed matter physics in <a href="http://trivediresearch.org.ohio-state.edu/" target="_self">Prof. Trivedi's group</a> at the Ohio State University. 
+		I am interested in understanding quantum phase transition, quantum spin liquids and their overlap with quantum information theory. 
+		When I am not hard at work, you can find me at the Union Cemetery.
 		</p>	
 
 
