--- a/publications/index.html
+++ b/publications/index.html
@@ -87,6 +87,12 @@
 			<br>
 
 			<div class="publication-list">
+			<div class="publication">
+				<p class="authors"> P. Zhu*, <span class="my-name">S. Feng</span>*, K. Wang*, T. Xiang, N. Trivedi</p>
+				<p class="title">Emergent Majorana metal from a chiral quantum spin liquid</p>
+				<p class="journal"><a href="https://arxiv.org/abs/2405.12278" class="journal-link">arXiv:2405.12278 (2024)</a></p>
+			    </div>
+			    
 				<div class="publication">
 				<p class="authors"> K. Wang*, <span class="my-name">S. Feng</span>*, P. Zhu, R. Chi, H.-J Liao, N. Trivedi, T. Xiang</p>
 				<p class="title">Fractionalization signatures in the dynamics of quantum spin liquids</p>
