--- a/publications/index.html
+++ b/publications/index.html
@@ -98,7 +98,13 @@
 				<p class="title">Fractionalization signatures in the dynamics of quantum spin liquids</p>
 				<p class="journal"><a href="https://arxiv.org/abs/2403.12141" class="journal-link">arXiv:2403.12141 (2024)</a></p>
 			    </div>
-			    
+
+				<div class="publication">
+				<p class="authors">I. Lee, J. Cen, O. Molchanov, <span class="my-name">S. Feng</span>, W. L. Huey, J. V. Tol, J. E. Goldberger, N. Trivedi, H.-Y. Kee, P. C. Hammel</p>
+				<p class="title">Spin-orbit coupling controlled two-dimensional magnetism in chromium trihalides</p>
+				<p class="journal"><a href="https://arxiv.org/abs/2405.16709" class="journal-link">arXiv:2405.16709 (2024)</a></p>
+			    </div>
+			    			    
 			    <div class="publication">
 				<p class="authors"><span class="my-name">S. Feng</span></p>
 				<p class="title">Hidden subsystem symmetry protected states in competing topological orders</p>
