--- a/publications/index.html
+++ b/publications/index.html
@@ -87,7 +87,13 @@
 			<br>
 
 			<div class="publication-list">
-			<div class="publication">
+				<div class="publication">
+				<p class="authors"> P. Zhu, <span class="my-name">S. Feng</span>, Y.-M. Lu</p>
+				<p class="title">Topologically obstructed superconducting and charge order in strongly correlated systems</p>
+				<p class="journal"><a href="https://arxiv.org/abs/2405.12278" class="journal-link">arXiv:2407.12278 (2024)</a></p>
+			    </div>
+			    
+				<div class="publication">
 				<p class="authors"> P. Zhu*, <span class="my-name">S. Feng</span>*, K. Wang*, T. Xiang, N. Trivedi</p>
 				<p class="title">Emergent Majorana metal from a chiral quantum spin liquid</p>
 				<p class="journal"><a href="https://arxiv.org/abs/2405.12278" class="journal-link">arXiv:2405.12278 (2024)</a></p>
