--- a/publications/index.html
+++ b/publications/index.html
@@ -88,6 +88,12 @@
 
 			<div class="publication-list">			    
 				<div class="publication">
+				<p class="authors"> P. Zhu, <span class="my-name">S. Feng</span>, Y.-M Lu</p>
+				<p class="title">Obstruction to broken symmetries in topological flat bands</p>
+				<p class="journal"><a href="https://arxiv.org/abs/2408.14533" class="journal-link">arXiv:2408.14533 (2024)</a></p>
+			    </div>
+
+				<div class="publication">
 				<p class="authors"> P. Zhu*, <span class="my-name">S. Feng</span>*, K. Wang*, T. Xiang, N. Trivedi</p>
 				<p class="title">Emergent Majorana metal from a chiral quantum spin liquid</p>
 				<p class="journal"><a href="https://arxiv.org/abs/2405.12278" class="journal-link">arXiv:2405.12278 (2024)</a></p>
