--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<p class="texts">
 	Willkommen! I'm a theorist in condensed matter physics and quantum information. I studied and worked in Xi'an, Los Angeles, Columbus and Munich.
-  I am currently a postdoctoral fellow working with <a href=" " target="_self">Quantum matter theory groups</a > at Technical University of Munich, Germany; 
+  I am currently a postdoctoral fellow working with <a href="https://www.ph.nat.tum.de/en/cmt/about-us/" target="_self">Quantum matter theory groups</a > at Technical University of Munich, Germany; 
   formerly a graduate student of condensed matter theory in <a href="http://trivediresearch.org.ohio-state.edu/" target="_self">Prof. Trivedi's group</a > at The Ohio State University, USA.  
   I am interested in understanding quantum phase transition, quantum spin liquids and their overlap with quantum information theory and quantum dynamics.	
 		</p>	
