--- a/publications/index.html
+++ b/publications/index.html
@@ -88,7 +88,7 @@
 
 			<div class="publication-list">			    
 				<div class="publication">
-				<p class="authors"> P. Zhu, <span class="my-name">S. Feng</span>, Y.-M Lu</p>
+				<p class="authors"> P. Zhu, <span class="my-name">S. Feng</span>, Y.-M. Lu</p>
 				<p class="title">Obstruction to broken symmetries in topological flat bands</p>
 				<p class="journal"><a href="https://arxiv.org/abs/2408.14533" class="journal-link">arXiv:2408.14533 (2024)</a></p>
 			    </div>
