--- a/publications/index.html
+++ b/publications/index.html
@@ -85,8 +85,7 @@
 		    <div class="publications-container">
 			<h2>Publication List</h2>
 			<br>
-
-			<div class="publication-list">			    
+			<div class="publication-list">			   
 				<div class="publication">
 				<p class="authors"> P. Zhu, <span class="my-name">S. Feng</span>, Y.-M. Lu</p>
 				<p class="title">Obstruction to broken symmetries in topological flat bands</p>
@@ -102,7 +101,7 @@
 				<div class="publication">
 				<p class="authors"> K. Wang*, <span class="my-name">S. Feng</span>*, P. Zhu, R. Chi, H.-J Liao, N. Trivedi, T. Xiang</p>
 				<p class="title">Fractionalization signatures in the dynamics of quantum spin liquids</p>
-				<p class="journal"><a href="https://arxiv.org/abs/2403.12141" class="journal-link">arXiv:2403.12141 (2024)</a></p>
+				<p class="journal"><a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.111.L100402" class="journal-link">Phys. Rev. B 111, L100402 (2025, Editor's Suggestion)</a></p>
 			    </div>
 
 				<div class="publication">
