--- a/publications/index.html
+++ b/publications/index.html
@@ -94,8 +94,8 @@
 
 				<div class="publication">
 				<p class="authors"> P. Zhu*, <span class="my-name">S. Feng</span>*, K. Wang*, T. Xiang, N. Trivedi</p>
-				<p class="title">Emergent Majorana metal from a chiral quantum spin liquid</p>
-				<p class="journal"><a href="https://arxiv.org/abs/2405.12278" class="journal-link">arXiv:2405.12278 (2024)</a></p>
+				<p class="title">Emergent quantum Majorana metal from a chiral quantum spin liquid</p>
+				<p class="journal"><a href="https://www.nature.com/articles/s41467-025-56789-8" class="journal-link">Nature Communications 16, 2420 (2025)</a></p>
 			    </div>
 			    
 				<div class="publication">
