--- a/publications/index.html
+++ b/publications/index.html
@@ -89,7 +89,7 @@
 				<div class="publication">
 				<p class="authors"> P. Zhu, <span class="my-name">S. Feng</span>, Y.-M. Lu</p>
 				<p class="title">Obstruction to broken symmetries in topological flat bands</p>
-				<p class="journal"><a href="https://arxiv.org/abs/2408.14533" class="journal-link">arXiv:2408.14533 (2024)</a></p>
+				<p class="journal"><a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.111.L161411" class="journal-link">Phys. Rev. B 111, L161411 (2025)</a></p>
 			    </div>
 
 				<div class="publication">
