--- a/publications/index.html
+++ b/publications/index.html
@@ -87,6 +87,13 @@
 			<br>
 			<div class="publication-list">			   
 				<div class="publication">
+				<p class="authors"><span class="my-name">S. Feng</span>, P. Zhu, J. Knolle, M. Knap</p>
+				<p class="title">Transient localization from fractionalization: Vanishingly small heat conductivity in gapless quantum magnets</p>
+				<p class="journal"><a href="https://arxiv.org/abs/2509.07062" class="journal-link">arXiv:2509.07062 (2025)</a></p>
+			    </div>
+
+
+				<div class="publication">
 				<p class="authors"> P. Zhu, <span class="my-name">S. Feng</span>, Y.-M. Lu</p>
 				<p class="title">Obstruction to broken symmetries in topological flat bands</p>
 				<p class="journal"><a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.111.L161411" class="journal-link">Phys. Rev. B 111, L161411 (2025)</a></p>
