--- a/publications/index.html
+++ b/publications/index.html
@@ -87,6 +87,12 @@
 			<br>
 			<div class="publication-list">			   
 				<div class="publication">
+				<p class="authors">D. Kong, <span class="my-name">S. Feng</span>, J. Xie, Y. N. Wu</p>
+				<p class="title">FFT-accelerated auxiliary variable MCMC for fermionic lattice models: a determinant-free approach with O(N logN) complexity</p>
+				<p class="journal"><a href="https://openreview.net/forum?id=lZfaGbAAGe" class="journal-link">arXiv:2510.07062 (2025)</a></p>
+			    </div>
+
+				<div class="publication">
 				<p class="authors"><span class="my-name">S. Feng</span>, P. Zhu, J. Knolle, M. Knap</p>
 				<p class="title">Transient localization from fractionalization: vanishingly small heat conductivity in gapless quantum magnets</p>
 				<p class="journal"><a href="https://arxiv.org/abs/2509.07062" class="journal-link">arXiv:2509.07062 (2025)</a></p>
@@ -94,7 +100,7 @@
 
 				<div class="publication">
 				<p class="authors">P. Belbase, A. Unnikrishnan, <span class="my-name">S. Feng</span>, E. S. Choi, J. Knolle, A. Banerjee</p>
-				<p class="title">Finite Spinon Density-of-States in Triangular-Lattice Delafossite TlYbSe<sub>2</sub></p>
+				<p class="title">Finite spinon density-of-states in triangular-lattice delafossite TlYbSe<sub>2</sub></p>
 				<p class="journal"><a href="https://arxiv.org/abs/2504.05436" class="journal-link">arXiv:2504.05436 (2025)</a></p>
 			    </div>
 
