--- a/publications/index.html
+++ b/publications/index.html
@@ -89,7 +89,7 @@
 				<div class="publication">
 				<p class="authors">D. Kong, <span class="my-name">S. Feng</span>, J. Xie, Y. N. Wu</p>
 				<p class="title">FFT-accelerated auxiliary variable MCMC for fermionic lattice models: a determinant-free approach with O(N logN) complexity</p>
-				<p class="journal"><a href="https://openreview.net/forum?id=lZfaGbAAGe" class="journal-link">arXiv:2510.07062 (2025)</a></p>
+				<p class="journal"><a href="https://arxiv.org/abs/2510.13866" class="journal-link">arXiv:2510.13866 (2025)</a></p>
 			    </div>
 
 				<div class="publication">
