--- a/publications/index.html
+++ b/publications/index.html
@@ -83,7 +83,8 @@
 		
 		
 		    <div class="publications-container">
-			<h2>Publication List</h2>
+			<h2>Publication List</h2>  <sub>(*contributed equally)</sub>
+			<br>
 			<br>
 			<div class="publication-list">			   
 				<div class="publication">
