--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	Willkommen! I'm a theorist in condensed matter physics and quantum information. I studied and worked in Xi'an, Los Angeles, Columbus and Munich.
   I am currently a postdoctoral fellow working with <a href="https://www.ph.nat.tum.de/en/cmt/about-us/" target="_self">Quantum matter / quantum information theory group</a > at Technical University of Munich, Germany; 
   formerly a graduate student of condensed matter theory in <a href="http://trivediresearch.org.ohio-state.edu/" target="_self">Prof. Trivedi's group</a > at The Ohio State University, USA.  
-  I am interested in understanding quantum phase transition, quantum spin liquids and their overlap with quantum information theory and quantum dynamics.	
+  I am interested in understanding quantum many-body systems, particularly frustrated quantum systems such as quantum spin liquids, topological entanglement and novel quantum dynamics therein, and machine learning methods for many-body systems.	
 		</p>	
 
 
