update on Dec 25

--- a/publications/index.html
+++ b/publications/index.html
@@ -86,7 +86,12 @@
 			<h2>Publication List</h2>  <sub>(*contributed equally)</sub>
 			<br>
 			<br>
-			<div class="publication-list">			   
+			<div class="publication-list">
+				<div class="publication">
+				<p class="authors">T.  Bader, <span class="my-name">S. Feng</span>, S. Budaraju, B. Federico, J. Knolle, F. Pollmann</p>
+				<p class="title">Triangular J<sub>1</sub>-J<sub>2</sub> Heisenberg antiferromagnet in a magnetic field</p>
+				<p class="journal"><a href="https://arxiv.org/abs/2512.08768" class="journal-link">arXiv:2512.08768 (2025)</a></p>
+			    </div>
 				<div class="publication">
 				<p class="authors">D. Kong, <span class="my-name">S. Feng</span>, J. Xie, Y. N. Wu</p>
 				<p class="title">FFT-accelerated auxiliary variable MCMC for fermionic lattice models: a determinant-free approach with O(N logN) complexity</p>
@@ -96,7 +101,7 @@
 				<div class="publication">
 				<p class="authors"><span class="my-name">S. Feng</span>, P. Zhu, J. Knolle, M. Knap</p>
 				<p class="title">Transient localization from fractionalization: vanishingly small heat conductivity in gapless quantum magnets</p>
-				<p class="journal"><a href="https://arxiv.org/abs/2509.07062" class="journal-link">arXiv:2509.07062 (2025)</a></p>
+				<p class="journal"><a href="https://arxiv.org/abs/2509.07062" class="journal-link">Phys. Rev. B 111.Lxxxxxx (2025)</a></p>
 			    </div>
 
 				<div class="publication">
