update on Dec 25

--- a/publications/index.html
+++ b/publications/index.html
@@ -101,7 +101,7 @@
 				<div class="publication">
 				<p class="authors"><span class="my-name">S. Feng</span>, P. Zhu, J. Knolle, M. Knap</p>
 				<p class="title">Transient localization from fractionalization: vanishingly small heat conductivity in gapless quantum magnets</p>
-				<p class="journal"><a href="https://arxiv.org/abs/2509.07062" class="journal-link">Phys. Rev. B 111.Lxxxxxx (2025)</a></p>
+				<p class="journal"><a href="https://arxiv.org/abs/2509.07062" class="journal-link">arxiv:2504.07062 (2025)</a></p>
 			    </div>
 
 				<div class="publication">
